// Copyright 2020 The Pipe Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package pipe.api.service;
option go_package = "github.com/kapetaniosci/pipe/pkg/app/api/service";

import "validate/validate.proto";

service WebAPI {
    // Runner
    rpc RegisterRunner(RegisterRunnerRequest) returns (RegisterRunnerResponse) {}
    rpc DisableRunner(DisableRunnerRequest) returns (DisableRunnerResponse) {}
    rpc ListRunners(ListRunnersRequest) returns (ListRunnersResponse) {}

    // Environment
    rpc AddEnvironment(AddEnvironmentRequest) returns (AddEnvironmentResponse) {}
    rpc RenameEnvironment(RenameEnvironmentRequest) returns (RenameEnvironmentResponse) {}
    rpc ListEnvironments(ListEnvironmentsRequest) returns (ListEnvironmentsResponse) {}

    // Application
    rpc AddApplication(AddApplicationRequest) returns (AddApplicationResponse) {}
    rpc DisableApplication(DisableApplicationRequest) returns (DisableApplicationResponse) {}
    rpc ListApplications(ListApplicationsRequest) returns (ListApplicationsResponse) {}
    rpc SyncApplication(SyncApplicationRequest) returns (SyncApplicationResponse) {}

    // Pipeline
    rpc ListPipelines(ListPipelinesRequest) returns (ListPipelinesResponse) {}
    rpc GetPipeline(GetPipelineRequest) returns (GetPipelineResponse) {}
    rpc CancelPipeline(CancelPipelineRequest) returns (CancelPipelineResponse) {}
    rpc ApprovePipelineStage(ApprovePipelineStageRequest) returns (ApprovePipelineStageResponse) {}
    rpc RetryPipelineStage(RetryPipelineStageRequest) returns (RetryPipelineStageResponse) {}

    // ApplicationState
    rpc GetApplicationState(GetApplicationStateRequest) returns (GetApplicationStateResponse) {}
    
    // Account
    rpc GetProject(GetProjectRequest) returns (GetProjectResponse) {}
    rpc GetMe(GetMeRequest) returns (GetMeResponse) {}
}

message RegisterRunnerRequest {
}

message RegisterRunnerResponse {
}

message DisableRunnerRequest {
}

message DisableRunnerResponse {
}

message ListRunnersRequest {
}

message ListRunnersResponse {
}

message AddEnvironmentRequest {
}

message AddEnvironmentResponse {
}

message RenameEnvironmentRequest {
}

message RenameEnvironmentResponse {
}

message ListEnvironmentsRequest {
}

message ListEnvironmentsResponse {
}

message AddApplicationRequest {
}

message AddApplicationResponse {
}

message DisableApplicationRequest {
}

message DisableApplicationResponse {
}

message ListApplicationsRequest {
}

message ListApplicationsResponse {
}

message SyncApplicationRequest {
}

message SyncApplicationResponse {
}

message ListPipelinesRequest {
}

message ListPipelinesResponse {
}

message GetPipelineRequest {
}

message GetPipelineResponse {
}

message CancelPipelineRequest {
}

message CancelPipelineResponse {
}

message ApprovePipelineStageRequest {
}

message ApprovePipelineStageResponse {
}

message RetryPipelineStageRequest {
}

message RetryPipelineStageResponse {
}

message GetApplicationStateRequest {
}

message GetApplicationStateResponse {
}

message GetProjectRequest {
}

message GetProjectResponse {
}

message GetMeRequest {
}

message GetMeResponse {
}
